tests/fail/invalid_mutually_recursive_record_declaration_3_depth.tig
let
    type A = {field : int}
in
    let
        type B = {field : A}
        var a:= 1
        type A = {field : C}
        function b(field : int) : int = 1
        type C = {field : B}
    in
    end
end
